--- a/Projects.html
+++ b/Projects.html
@@ -53,7 +53,7 @@
                     <img class="bd-placeholder-img card-img-top" src="images/Let'sGo.PNG" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                     <div class="card-body">
                         <p class="card-text">Let'sGo Website Project</p>
-                        <a href="./Let's Go/index.html"><button type="button" class="btn btn-outline-primary">Live Demo</button></a>
+                        <a href="Let's Go/index.html"><button type="button" class="btn btn-outline-primary">Live Demo</button></a>
                     </div>
                   </div>
                 </div>
@@ -62,7 +62,7 @@
                       <img class="bd-placeholder-img card-img-top" src="images/Dentist.PNG" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                       <div class="card-body">
                           <p class="card-text">Let'sGo Website Project</p>
-                          <a href="./Dentist/index.html"><button type="button" class="btn btn-outline-primary">Live Demo</button></a>
+                          <a href="Dentist/index.html"><button type="button" class="btn btn-outline-primary">Live Demo</button></a>
                       </div>
                     </div>
                   </div>
