--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col d-flex flex-column align-items-center gap-2 p-4">
           <h2 class="fw-bold text-body-emphasis" id="call1">Waleed Jehad</h2>
           <p class="text-body-secondary col-10 px-5" style="font-size: 22px;">i have worked on web development mobile application and disktop application. the most thing that i have work on it is the web development. Also i have a Cirtfcat on it. If you want to see one of my other projecct that i have work on it.</p>
-          <a href="#" class="btn btn-primary btn-lg gradient-background " id="call3">Please Click Here</a>
+          <a href="Projects.html" class="btn btn-primary btn-lg gradient-background " id="call3">Please Click Here</a>
         </div>
         </div>
       </div>
